--- a/style.css
+++ b/style.css
@@ -236,3 +236,39 @@ a:hover{
     width: 100%;
   }
 }
+
+
+.center{
+    text-align: center;
+}
+    .slider {
+        width: 20%;
+        
+    }
+
+    .slick-slide {
+      margin: 0px 20px;
+    }
+
+    .slick-slide img {
+      width: 100%;
+    }
+
+    .slick-prev:before,
+    .slick-next:before {
+      color: black;
+    }
+
+
+    .slick-slide {
+      transition: all ease-in-out .3s;
+      opacity: .2;
+    }
+    
+    .slick-active {
+      opacity: .5;
+    }
+
+    .slick-current {
+      opacity: 1;
+    }
